--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,8 +101,10 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/*
 
-.search-engine-optimization {
+*/
+.main-block {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -111,7 +113,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+.main-block {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -120,7 +122,7 @@ p {
     color: #ffffff;
 }
 
-.social-media-marketing {
+.main-block {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -129,29 +131,29 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.main-block img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+.main-block img {
     max-height: 200px;
 }
 
-.social-media-marketing img {
+.main-block img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.main-block h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+.main-block h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.social-media-marketing h2 {
+.main-block h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
